# sdk

./: .editorconfig  .eslintrc.json  .gitignore  .npmignore  .prettierrc.json  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  params_store.json  tsconfig.json  webpack.config.js
.cargo/: config.toml
.github/workflows/: build-js.yml  build-python.yml  publish-to-npm.yml
benches/: ntt.rs  poly.rs
client/: .gitignore  Cargo.toml  LICENSE_MIT  THIRD-PARTY-NOTICES.TXT  index.html  main.js
client/css/: style.css
client/js/: bz2.js
client/src/: lib.rs
client/static/: index.html
client/static/css/: loading.css  reset.css  style.css
client/static/js/: idb.js  main.js  wtf_wikipedia.js
docs/: .gitignore  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/docs/: buckets.mdx  how-it-works.mdx  index.mdx  performance.mdx  privacy-model.mdx
docs/src/components/: Center.tsx
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
docs/src/theme/Footer/: index.tsx
docs/src/theme/Icon/ExternalLink/: index.tsx
docs/src/theme/Navbar/ColorModeToggle/: index.tsx
docs/src/theme/TOC/: index.tsx
e2e-tests/: api.ts  main.ts  package-lock.json  package.json
e2e-tests/params/: v0.json  v1.json
e2e-tests/tests/: simple.ts
examples/browser-simple/: index.html  main.js
examples/node/: main.ts  package-lock.json  package.json  tsconfig.json
examples/node-local/: .eslintrc.json  main.ts  package-lock.json  package.json
examples/python/: basic.py  main.py
examples/react-complex/: README.md  package-lock.json  package.json
examples/react-complex/public/: index.html
examples/react-complex/src/: App.css  App.tsx
examples/valentines/: package.json  tsconfig.json
examples/valentines/public/: index.html
examples/valentines/src/: App.tsx  index.tsx  styles.css  util.tsx
js/: index.ts
js/bridge/: Cargo.toml  LICENSE  README.md
js/bridge/src/: doublepir_lib.rs  lib.rs
js/bucket/: bucket.ts  bucket.ts.rej  bucket_service.ts
js/client/: api.ts  seed.ts
js/compression/: bz2_decompress.js  pako.js
js/data/: bloom.ts  serializer.ts  varint.ts
js/lib/: blyss_lib.ts  helper.ts  util.ts
js/tests/: bloom.test.ts  seed.test.ts  serializer.test.ts  varint.test.ts
lib/: .gitignore
lib/blyss-rs/: Cargo.toml  README.md
lib/blyss-rs/src/: api.rs  error.rs  lib.rs  proof.rs
lib/doublepir/: .gitignore  Cargo.toml  LICENSE.txt  NOTICES.txt  README.md
lib/doublepir/src/: lib.rs
lib/doublepir/src/arith/: arith.rs
lib/doublepir/src/database/: database.rs
lib/doublepir/src/doublepir/: client.rs  doublepir.rs  mod.rs  server.rs
lib/doublepir/src/matrix/: contract.rs  derivation.rs  gaussian.rs  indexing.rs  kernels.rs  matrix.rs  mod.rs  ops.rs  squish.rs  transpose.rs
lib/doublepir/src/params/: mod.rs  params.rs  params_store.rs
lib/doublepir/src/pir/: mod.rs  scheme.rs
lib/doublepir/src/serializer/: mod.rs  serializer.rs
lib/doublepir/src/util/: checksum.rs  consts.rs  fixed_point_iter.rs  log.rs  mod.rs
lib/server/: .gitignore  Cargo.toml  README.md  prepare_disks.sh
lib/server/src/: error.rs  lib.rs  server.rs
lib/server/src/compute/: dot_product.rs  fold.rs  pack.rs  query_expansion.rs
lib/server/src/db/: aligned_memory.rs  loading.rs  sorted_vec.rs  sparse_db.rs  write.rs
lib/spiral-rs/: Cargo.toml  README.md
lib/spiral-rs/.cargo/: config.toml
lib/spiral-rs/src/: aligned_memory.rs  arith.rs  client.rs  discrete_gaussian.rs  gadget.rs  key_value.rs  lib.rs  noise_estimate.rs  number_theory.rs  params.rs  poly.rs  server.rs  util.rs
python/: Cargo.toml  pyproject.toml
python/blyss/: __init__.py  api.py  bloom.py  blyss_lib.py  bucket.py  bucket_service.py  main.py  req_compression.py  seed.py  serializer.py  varint.py
python/docs/: main.md
python/src/: lib.rs
python/tests/: test_service.py
spiral-rs/: Cargo.toml
spiral-rs/.cargo/: config.toml
spiral-rs/benches/: ntt.rs  poly.rs  server.rs
spiral-rs/src/: aligned_memory.rs  arith.rs  client.rs  discrete_gaussian.rs  gadget.rs  lib.rs  main.rs  ntt.rs  number_theory.rs  params.rs  poly.rs  server.rs  util.rs
src/: arith.rs  client.rs  discrete_gaussian.rs  gadget.rs  lib.rs  main.rs  ntt.rs  number_theory.rs  params.rs  poly.rs  util.rs
