[package]
name = "spiral-rs"
version = "0.1.0"
edition = "2021"

[features]
default = []
client = ["reqwest"]
server = ["actix-web", "actix-cors", "actix-server", "actix-http", "actix-service", "serde", "futures", "uuid"]

[[bin]]
name = "client"
required-features = ["client"]

[[bin]]
name = "server"
required-features = ["server"]

[[bin]]
name = "e2e"

[dependencies]
getrandom = { features = ["js"], version = "0.2.6" }
rand = { version = "0.8.5", features = ["small_rng"] }
serde_json = "1.0"
rayon = "1.5.2"
rand_chacha = "0.3.1"

reqwest = { version = "0.11", features = ["blocking"], optional = true }

serde = { version = "1.0", features = ["derive"], optional = true }
actix-web = { version = "4.0.1", optional = true }
actix-cors = { version = "0.6.1", optional = true }
actix-server = { version = "2.1.1", optional = true }
actix-http = { version = "3.0.4", optional = true }
actix-service = { version = "2.0.2", optional = true }
futures = { version = "0.3", optional = true }
uuid = { version = "1.0.0", features = ["v4"], optional = true }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
pprof = { version = "0.4", features = ["flamegraph", "criterion"] }

[[bench]]
name = "ntt"
harness = false

[[bench]]
name = "server"
harness = false

[[bench]]
name = "poly"
harness = false

[profile.release]
# lto = "fat"
# codegen-units = 1
# panic = "abort"
