[package]
name = "doublepir-rs"
version = "0.1.0"
edition = "2021"

[features]
client = ["reqwest", "base64", "sha1"]

[dependencies]
rand_chacha = "0.3.1"
rand = "0.8.4"
subtle = "2.4"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"], optional = true }
base64 = { version = "0.21.0", optional = true }
sha1 = { version = "0.10.5", optional = true }
rayon = "1.6.1"
miniz_oxide = "0.7.1"
serde_json = "1.0.92"
ctr = "0.9.2"
aes = "0.8.2"
crypto = { version = "0.4.0", features = ["cipher"] }
rand_distr = "0.4.3"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["macros"] }

[[bin]]
name = "e2e"

[[bin]]
name = "client"
required-features = ["client"]

[[bin]]
name = "preprocess"

[profile.release-with-debug]
inherits = "release"
debug = true
