[package]
name = "spiral-server"
version = "0.2.1-alpha.2"
edition = "2021"
authors = [
    "Samir Menon <samir@blyss.dev>",
    "Neil Movva <neil@blyss.dev>"]
homepage = "https://blyss.dev"
repository = "https://github.com/blyssprivacy/sdk"
description = "Server for the Spiral PIR scheme"
keywords = ["privacy", "fhe", "cryptography"]
categories = ["cryptography"]
readme = "README.md"
license = "MIT"
rust-version = "1.70.0"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[features]
default = []

[dependencies]
spiral-rs = { version = "0.2.1-alpha.2", path = "../spiral-rs" }
rand = { version = "0.8.5", features = ["small_rng"] }
serde_json = "1.0"
rayon = "1.5.2"
rand_chacha = "0.3.1"

actix-web = { version = "4.3.1", default_features = false, features = ["macros", "compress-gzip"] }
actix-http = { version = "3.0.4" }
futures = { version = "0.3" }
uuid = { version = "1.0.0", features = ["v4"] }
sha2 = "0.10.6"
bzip2 = "0.4.4"
base64 = "0.21.0"

[profile.release-with-debug]
inherits = "release"
debug = true
