[package]
name = "spiral-rs"
version = "0.2.0"
edition = "2021"

[features]
server = ["rayon"]

[dependencies]
rayon = { version = "1.6.1", optional = true }
getrandom = { features = ["js"], version = "0.2.6" }
rand = { version = "0.8.5", features = ["small_rng"] }
serde_json = "1.0"
rand_chacha = "0.3.1"
sha2 = "0.10"
subtle = "2.4"