[package]
name = "spiral-rs"
version = "0.2.1-alpha.2"
edition = "2021"
authors = [
    "Samir Menon <samir@blyss.dev>",
    "Neil Movva <neil@blyss.dev>"]
homepage = "https://blyss.dev"
repository = "https://github.com/blyssprivacy/sdk"
description = "Rust implementation of the Spiral PIR scheme"
keywords = ["privacy", "fhe", "cryptography"]
categories = ["cryptography"]
readme = "README.md"
license = "MIT"

[features]
server = ["rayon"]

[dependencies]
rayon = { version = "1.6.1", optional = true }
getrandom = { features = ["js"], version = "0.2.8" }
rand = { version = "0.8.5", features = ["small_rng"] }
serde_json = "1.0"
rand_chacha = "0.3.1"
sha2 = "0.10"
subtle = "2.4"